--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@upstash/redis": "^1.34.9",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.43.1",
+    "jose": "^6.0.11",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.28",
+    "pg": "^8.16.0",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -26,8 +30,10 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/pg": "^8.15.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
