--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jose": "^6.0.11",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.28",
+    "node-mailjet": "^6.0.8",
     "pg": "^8.16.0",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
@@ -30,6 +31,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
